<?xml version="1.0"?>
<package>
  <name>mekf</name>
  <version>0.0.0</version>
  <description>Multiplicative extended kalman filter for position and attitude estimation</description>

  <maintainer email="oystein.volden@ntnu.no">oysteinvolden</maintainer>
  <author>Øystein Volden</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>eigen_conversions</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>eigen_conversions</run_depend>
  
  <export>
  </export>
</package>
